<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ugr.fajardo.prueba00.CuestionLevel1Activity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@mipmap/gonzalesh" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lineSpacingExtra="24sp"
        android:text="@string/questionLevel1"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/respuesta1" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/respuesta2" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/respuesta3" />
</LinearLayout>
