<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/museo"
    tools:context="com.ugr.fajardo.prueba00.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:text="@string/continuar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="59dp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/buttonNew"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:width="200dp"
        android:text="@string/nuevoJuego"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonCon" />

    <Button
        android:id="@+id/buttonOp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:text="@string/opciones"
        app:layout_constraintTop_toBottomOf="@+id/buttonNew"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:width="200dp"
        android:text="@string/acercaDe"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonOp" />



</LinearLayout>
